--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=livewiresos
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://livewiresos
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=livewiresos
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=16050912
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
